--- a/theme.toml
+++ b/theme.toml
@@ -24,6 +24,17 @@ max_width_for = "main" # Can be either main or body
 # setting. 800px is the water.css default
 max_width = "800px"
 
+# If home_section is empty, homepage is generated from the content of the index
+# page content/_index*.md. If you want to display a section's latest articles on
+# the homepage, set home_section to the name of this section without _index.md,
+# like "blog" for content/blog/. Pagination is defined by this section's 
+# pagination settings.
+home_section = ""
+# Determines whether to show full articles on the homepage. If disabled, it will
+# only show summaries (if they are defined in the content), or the date/title.
+home_fullarticles = true
+
+
 # The settings below point to a markdown page in content/,
 # without the "content/" in the path. Additionally, the page
 # will be translated in the current language. Use "disabled"
