Output message on empty section

--- a/theme.toml
+++ b/theme.toml
@@ -66,9 +66,12 @@ readmore = "Lire la suite"
 previousPage = "Page précédente"
 nextPage = "Page suivante"
 dateFormat = "%d/%m/%Y"
+nothing_yet = "Il n'y a pas encore d'article dans cette section."
 [translations.en]
 source = "Source for this page"
 readmore = "Read more"
 previousPage = "Previous page"
 nextPage = "Next page"
 dateFormat = "%m/%d/%Y"
+base_url = "https://staticadventures.netlib.re"
+nothing_yet = "There is no article in this section yet."
